changed style of home page

--- a/views/home.pug
+++ b/views/home.pug
@@ -11,34 +11,29 @@ html(lang="en")
       h1(class="h1")= header
       h4 To access the API content, please visit the following urls
       hr
+
       h4 Retrieve all posts by sending a GET REQUEST to:
       code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts
       hr
+      br
       h4 Perform CRUD (Create, Read, Update, Delete) Operations
-      ul
-        li
-          p (CREATE) - POST REQUEST WITH :
-          code { title: value, body: value}
-          br
-          br
-          p To :
-          code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts
+      hr
 
-        br
-        li
-          p (Read) - GET REQUEST and replace #[code :id] with desired post id
-          p To :
-          code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
-        br
-        li
-          p (Update) - PUT REQUEST and replace #[code :id] with desired post id
-          p With:
-            br
-            code { newTitle: value, newBody: value}
-          p To :
-          code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
-        br
-        li
-          p (Delete) - DELETE REQUEST and replace #[code :id] with desired post id
-          p To :
-          code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
+
+      p #[b ( CREATE )] - Send a POST REQUEST :
+      p With : #[code { title: value, body: value}]
+      code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts
+      hr
+
+
+      p #[b ( READ )] - Send a GET REQUEST and replace #[code :id] with desired post id
+      code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
+      hr
+
+      p #[b ( UPDATE )] - Send a PUT REQUEST and replace #[code :id] with desired post id
+      p With : #[code { newTitle: value, newBody: value}]
+      code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
+      hr
+
+      p #[b ( DELETE )] - Send a DELETE REQUEST and replace #[code :id] with desired post id
+      code(class="bg-dark text-white p-2") https://maljuburi-node-api.herokuapp.com/api/posts/:id
